# Patwin

./: CMakeLists.txt  build.sh
cmake/: CMakeLists.txt
cmake/platform/: unix.cmake  windows.cmake
install/: config.xml
install/htdocs/: about.html  index.html
lib/boost/: CMakeLists.txt
lib/cpp-netlib/boost/: mime.hpp
lib/tinyxml/: CMakeLists.txt
src/: Config.cpp  Config.hpp  Includes.hpp  Log.cpp  Log.hpp  Main.cpp  Patwin.cpp  Patwin.hpp  Patwin.rc  Singleton.hpp  Version.hpp
